almost done slides

--- a/index.Rmd
+++ b/index.Rmd
@@ -119,7 +119,7 @@ knitr::include_graphics("media/godzilla.png")
 ---
 ### `r fontawesome::fa("question", fill = "#05859B", a11y = "sem")` Technical interview questions/tasks can take *many* forms
 
-Some very general examples: 
+<span style = 'font-size: 90%;'>Some very general examples:</span> 
 
 <span style = 'font-size: 80%;'>`r fontawesome::fa("angle-right", fill = "#05859B", a11y = "sem")` Can you explain the difference between statistical test A and statistical test B?</span>
 
@@ -129,16 +129,31 @@ Some very general examples:
 
 <span style = 'font-size: 80%;'>`r fontawesome::fa("angle-right", fill = "#05859B", a11y = "sem")` Here is a data set. Using your preferred programming language, please answer question X.</span>
 
-The type, length, and difficulty of technical questions typically varies with the job level (e.g. junior vs. senior-level data scientist)
+<br>
+
+--
+
+<span style = 'font-size: 90%;'>The type, length, and difficulty of technical questions may vary with:</span> 
+
+<span style = 'font-size: 80%;'>`r fontawesome::fa("angle-right", fill = "#05859B", a11y = "sem")` job classification (e.g. junior vs. senior-level data scientist)</span>   
+
+<span style = 'font-size: 80%;'>`r fontawesome::fa("angle-right", fill = "#05859B", a11y = "sem")` sector (e.g. academia vs. industry)</span>  
+
+<span style = 'font-size: 80%;'>`r fontawesome::fa("angle-right", fill = "#05859B", a11y = "sem")` stage of the interview process (e.g. you may have an entire interview stage dedicated to showcasing your technical skills via a coding/analytical challenge)</span>
 
 ---
 ### `r fontawesome::fa("book-reader", fill = "#05859B", a11y = "sem")` There are ways to prepare:
 
-<span style = 'font-size: 80%;'>`r fontawesome::fa("angle-right", fill = "#05859B", a11y = "sem")` Analyze the job posting and organization's website</span>
+<span style = 'font-size: 80%;'>`r fontawesome::fa("angle-right", fill = "#05859B", a11y = "sem")` Research the role (e.g. analyze the job posting and organization's website)</span>
 
-* <span style = 'font-size: 80%;'>identify what type of data science work/analyses you might be embarking on should you land/accept the job</span>
+* <span style = 'font-size: 70%;'>identify what type of data science work/analyses you might be embarking on should you land/accept the job</span>
+* <span style = 'font-size: 70%;'>review the types of tools, methodologies, and approaches you might use to address the work/problems outlined in the employer's materials</span>
+* <span style = 'font-size: 70%;'>identify any areas you may not have direct experience in -- have an understanding of the landscape of tools available for working in that space and be able to reference a few (but be honest about your experience)</span>
 
-<span style = 'font-size: 80%;'>`r fontawesome::fa("angle-right", fill = "#05859B", a11y = "sem")`</span>
+<span style = 'font-size: 80%;'>`r fontawesome::fa("angle-right", fill = "#05859B", a11y = "sem")` Be able to talk about your project(s)</span>
+
+* <span style = 'font-size: 70%;'>Some technical questions or tasks are more open-ended (e.g. see Example 1 on [slide 12](https://ucsb-meds.github.io/technical-interviews/#7)). Be prepared to talk clearly and succinctly about your goals and contributions to a project.</span>
+
 
 <span style = 'font-size: 80%;'>`r fontawesome::fa("angle-right", fill = "#05859B", a11y = "sem")`</span>
 
@@ -161,7 +176,7 @@ class: inverse, middle, center
 
 ### `r fontawesome::fa("tree", fill = "#93C6C2", a11y = "sem")` Example 3: Data Specialist @ Bureau of Land Management
 
-Candidates are asked a series of interview questions, some of which require discussion about experience using particular data science tools and methodologies. Find all the interview questions [here](https://docs.google.com/document/d/1uX3Jg8iDtmceKCslmjk9nMrhhL4jRbYE-fKfdcwxCiQ/edit?usp=sharing).
+Candidates are asked a series of interview questions, some of which required discussion about experience using particular data science tools and methodologies. Find all the interview questions [here](https://docs.google.com/document/d/1uX3Jg8iDtmceKCslmjk9nMrhhL4jRbYE-fKfdcwxCiQ/edit?usp=sharing).
 
 ---
 class: inverse, middle, center
@@ -171,9 +186,46 @@ class: inverse, middle, center
 Candidates were given 48 hours to complete [this technical exercise](https://docs.google.com/document/d/1XMMUwnq5DblgbqLlh6C9_kPMVeLnqNGNz_Wk4RrGPps/edit?usp=sharing).
 
 ---
-### Closing thoughts:
+### Some closing thoughts:
 
-<span style = 'font-size: 80%;'>`r fontawesome::fa("angle-right", fill = "#05859B", a11y = "sem")`</span>
+<span style = 'font-size: 80%;'>`r fontawesome::fa("angle-right", fill = "#05859B", a11y = "sem")` Save your job postings (as pdfs, not just the URL) and any associated technical questions/challenges you may get during the interview process -- this not only helps you ensure that you highlight the skills they want see in a candidate but also review and practice past problems</span>
+
+<span style = 'font-size: 80%;'>`r fontawesome::fa("angle-right", fill = "#05859B", a11y = "sem")` You can learn a lot from the experiences of others (i.e. talk with one another!)</span>
 
 <span style = 'font-size: 80%;'>`r fontawesome::fa("angle-right", fill = "#05859B", a11y = "sem")` Technical questions are often just one part of the overall interview process -- don't ignore the other interview skills you've learned!</span>
 
+---
+class: center, middle
+
+## Now go crush those interviews!
+```{r echo = FALSE, out.width = '50%'}
+knitr::include_graphics("media/michael_scott.gif")
+```
+
+Slides created via the R packages:
+
+[**xaringan**](https://github.com/yihui/xaringan)<br>
+[**gadenbuie/xaringanthemer**](https://github.com/gadenbuie/xaringanthemer)
+
+<span style = 'font-size: 75%;'>*If you see mistakes or want to suggest changes, please create an [issue](https://github.com/UCSB-MEDS/technical-interviews/issues) on the source repository.*</span>
+
+---
+class: inverse, middle, center
+
+## `r fontawesome::fa("brain", fill = "#93C6C2", a11y = "sem")` Practice questions
+
+Find a partner and practice responding to these technical (albeit silly) questions. A primary goal is to gain confidence in talking through your thought processes out loud as you attempt to answer these questions. You should feel free to ask explicit, clarifying questions (like you might do in an interview). Pick one out of a hat at random to keep things interesting :)
+
+---
+### Practice questions
+
+<span style = 'font-size: 80%;'>**1.** How many tennis balls can you fit inside the NCEAS first floor classroom?</span>  
+<span style = 'font-size: 80%;'>**2.** How long would it take for you to walk across the Santa Barbara Channel from Ventura Harbor to Scorpion Anchorage.</span>  
+<span style = 'font-size: 80%;'>**3.** Explain, in detail, the process of making a cup of coffee.</span>  
+<span style = 'font-size: 80%;'>**4.** How many licks does it take to get to the center of a Tootsie Pop?</span>  
+<span style = 'font-size: 80%;'>**5.** You have 8 pennies and a scale. One penny weighs more than the others. Determine which penny weighs more in three or fewer steps. </span>  
+<span style = 'font-size: 80%;'>**6.** Given a number 1 to 1000, what is the minimum number of guesses you would need to find that particular number if you are only given the hints "higher" or "lower" after each of your guesses.</span>  
+<span style = 'font-size: 80%;'>**7.** How would you describe the taste of a cheeseburger (alternatively, substitute a different food here)?</span>  
+<span style = 'font-size: 80%;'>**8.** How many keystrokes does it take to wear the letters off your keyboard?</span>  
+<span style = 'font-size: 80%;'>**9.** Why don't whales have tails in the same direction as those of sharks?</span>  
+<span style = 'font-size: 80%;'>**10.** ?</span>
